# go-bazel-hello

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE
cmd/goodbye/: BUILD.bazel  goodbye.go
cmd/hello/: BUILD.bazel  hello.go
pkg/say/: BUILD.bazel  say.go
