load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "hello_lib",
    srcs = ["hello.go"],
    importpath = "github.com/emmetcaulfield/go-bazel-hello/cmd/hello",
    visibility = ["//visibility:private"],
    deps = ["//pkg/say"],
)
